--- a/MusicCatalog/MusicCatalogAngular/src/app/navbar/navbar.component.html
+++ b/MusicCatalog/MusicCatalogAngular/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -11,10 +11,10 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <a *ngIf="!isLogged" class="btn btn-outline-success my-2 my-sm-0" href="login">Logowanie</a>
+      <a *ngIf="!isLogged" class="btn btn-outline-light my-2 my-sm-0" href="login">Logowanie</a>
       &nbsp;
-      <a *ngIf="!isLogged" class="btn btn-outline-success my-2 my-sm-0" href="register">Rejestracja</a>
-      <button *ngIf="isLogged" (click)="logOut()" class="btn btn-outline-success my-2 my-sm-0">Wyloguj</button>
+      <a *ngIf="!isLogged" class="btn btn-outline-light my-2 my-sm-0" href="register">Rejestracja</a>
+      <button *ngIf="isLogged" (click)="logOut()" class="btn btn-outline-light my-2 my-sm-0">Wyloguj</button>
     </form>
   </div>
 </nav>
