--- a/MusicCatalog/MusicCatalogAngular/src/app/albums/albums.component.html
+++ b/MusicCatalog/MusicCatalogAngular/src/app/albums/albums.component.html
@@ -1,5 +1,28 @@
 <app-navbar></app-navbar>
 <div *ngIf="!isSingleView" style="margin: auto; width: 80%; margin-top: 30px">
+
+  <form (ngSubmit)="onFilteringButtonClick()">
+    <div class="form-row">
+      <div class="form-group col-sm">
+        <label for="albumTitle">Album</label>
+        <input [(ngModel)]="filteringData.albumTitle" type="text" class="form-control" id="albumTitle" name="albumTitle" placeholder="Tytuł albumu">
+      </div>
+      <div class="form-group col-sm">
+        <label for="artistName">Artysta</label>
+        <input [(ngModel)]="filteringData.artistName" type="text" class="form-control" id="artistName" name="artistName" placeholder="Artysta">
+      </div>
+      <div class="form-group col-sm">
+        <label for="publicationYear">Rok wydania</label>
+        <input [(ngModel)]="filteringData.publicationYear" type="number" class="form-control" id="publicationYear" name="publicationYear" placeholder="Rok wydania albumu">
+      </div>
+    </div>
+    <div class="text-center">
+      <button type="submit" class="btn btn-primary">Filtruj</button>
+    </div>
+  </form>
+
+  <br/>
+
   <table class="table table-striped table-bordered table-sm">
     <tr>
       <th class="text-center">Album</th>
@@ -28,6 +51,8 @@
     <button (click)="onCreateAlbumButtonClick()" id="button-3" class="btn btn-success">Dodaj album</button>
   </div>
 
+  <br/>
+  
 </div>
 
 <div *ngIf="isSingleView" style="margin: auto; width: 50%; margin-top: 10px">
