--- a/MusicCatalog/MusicCatalogAngular/src/app/albums/albums.component.html
+++ b/MusicCatalog/MusicCatalogAngular/src/app/albums/albums.component.html
@@ -47,12 +47,40 @@
   </table>
 
   <br/>
+
+  <form (ngSubmit)="onFilteringButtonClick()" class="form-inline">
+    <div class="form-group mx-sm-3 mb-2">
+      <label for="pageSize" style="margin-right: 5px;">Ilość albumów na stronie </label>
+        <input [(ngModel)]="paginationData.pageSize" type="number" class="form-control" id="pageSize" name="pageSize" placeholder="{{paginationData.pageSize}}">
+    </div>
+    <button type="submit" class="btn btn-primary mb-2">Odśwież</button>
+
+    <div class="text-right">
+    <nav aria-label="...">
+      <ul class="pagination">
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Poprzednia</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item active" aria-current="page">
+          <a class="page-link" href="#">2</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#">Następna</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
+  </form>
+
+  <br/>
   <div class="text-center">
     <button (click)="onCreateAlbumButtonClick()" id="button-3" class="btn btn-success">Dodaj album</button>
   </div>
 
   <br/>
-  
+
 </div>
 
 <div *ngIf="isSingleView" style="margin: auto; width: 50%; margin-top: 10px">
