Extracted adding a new album to navbar

--- a/MusicCatalog/MusicCatalogAngular/src/app/navbar/navbar.component.html
+++ b/MusicCatalog/MusicCatalogAngular/src/app/navbar/navbar.component.html
@@ -9,6 +9,9 @@
       <li class="nav-item active">
         <a class="nav-link" href="albums">Moje albumy <span class="sr-only">(current)</span></a>
       </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="createAlbum">Dodaj album <span class="sr-only"></span></a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <a *ngIf="!isLogged" class="btn btn-outline-light my-2 my-sm-0" href="login">Logowanie</a>
